# tinyllm-eval-suite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: usage.md
examples/tasks/: glue_sst2.yaml
src/tinyllm_eval/: __init__.py  cli.py  config.py  loaders.py  metrics.py  reports.py  runner.py
tests/: test_config.py  test_metrics.py  test_runner.py
